; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/libpq/extr_fe-connect.c_conninfo_uri_parse.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/libpq/extr_fe-connect.c_conninfo_uri_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i32, i32)* @conninfo_uri_parse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @conninfo_uri_parse(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %6, align 4
  %10 = call i32* @conninfo_init(i32 %9)
  store i32* %10, i32** %8, align 8
  %11 = load i32*, i32** %8, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %37

14:                                               ; preds = %3
  %15 = load i32*, i32** %8, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @conninfo_uri_parse_options(i32* %15, i8* %16, i32 %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %14
  %21 = load i32*, i32** %8, align 8
  %22 = call i32 @PQconninfoFree(i32* %21)
  store i32* null, i32** %4, align 8
  br label %37

23:                                               ; preds = %14
  %24 = load i32, i32* %7, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %35

26:                                               ; preds = %23
  %27 = load i32*, i32** %8, align 8
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @conninfo_add_defaults(i32* %27, i32 %28)
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %34, label %31

31:                                               ; preds = %26
  %32 = load i32*, i32** %8, align 8
  %33 = call i32 @PQconninfoFree(i32* %32)
  store i32* null, i32** %4, align 8
  br label %37

34:                                               ; preds = %26
  br label %35

35:                                               ; preds = %34, %23
  %36 = load i32*, i32** %8, align 8
  store i32* %36, i32** %4, align 8
  br label %37

37:                                               ; preds = %35, %31, %20, %13
  %38 = load i32*, i32** %4, align 8
  ret i32* %38
}

declare dso_local i32* @conninfo_init(i32) #1

declare dso_local i32 @conninfo_uri_parse_options(i32*, i8*, i32) #1

declare dso_local i32 @PQconninfoFree(i32*) #1

declare dso_local i32 @conninfo_add_defaults(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
